--- a/GDP Analysis.ipynb
+++ b/GDP Analysis.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 164,
+   "id": "b5b5d370-f2e7-4714-842e-4f7eba9bff79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "from dashboard import show_dashboard\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "id": "979dc517-86f3-4116-86de-f036efa707e5",
    "metadata": {},
    "outputs": [
@@ -36,6 +47,8 @@
     "   #1     #RESHAPING DATA\n",
     "#wide format to long format\n",
     "import pandas as pd #imports panda,pd used as short name\n",
+    "config = {\"operation\": \"average\"}  # or \"sum\"\n",
+    "\n",
     "print(\"1:loading data\")\n",
     "\n",
     "# load csv file\n",
@@ -50,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 166,
    "id": "84ddce70-0939-4197-9a69-a82814fdfbc0",
    "metadata": {},
    "outputs": [
@@ -112,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 167,
    "id": "9318f409-882c-45b7-8828-a9a0ab2f63ae",
    "metadata": {},
    "outputs": [
@@ -120,13 +133,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3:cleaning data\n",
-      "cleaning complete\n",
+      "3: cleaning data\n",
+      "Cleaning complete\n",
       "Rows before: 17290\n",
       "Rows after: 14561\n",
       "Removed: 2729 empty rows\n",
       "\n",
-      "Cleaned data(first 10 rows):\n",
+      "Cleaned data (first 10 rows):\n",
       "                   Country Name         Region  Year         Value\n",
       "1   Africa Eastern and Southern         Africa  1960  2.420569e+10\n",
       "3    Africa Western and Central         Africa  1960  1.190481e+10\n",
@@ -140,8 +153,8 @@
       "20                   Bangladesh           Asia  1960  4.274894e+09\n",
       "\n",
       "Data types:\n",
-      "Country Name        str\n",
-      "Region              str\n",
+      "Country Name     object\n",
+      "Region           object\n",
       "Year              int64\n",
       "Value           float64\n",
       "dtype: object\n"
@@ -151,39 +164,40 @@
    "source": [
     "#3\n",
     "#cleaning data\n",
-    "print(\"3:cleaning data\")\n",
+    "print(\"3: cleaning data\")\n",
     "\n",
-    "rows_before = len(data_long) #count\n",
+    "rows_before = len(data_long)  # count\n",
     "\n",
-    "# Remove rows where Value is empty (NaN)\n",
-    "data_clean = data_long.dropna(subset=['Value']) #delete rows where value is empty,like some countries have 0 GDP\n",
+    "#remove rows where value empty (NaN) and make a copy\n",
+    "data_clean = data_long.dropna(subset=['Value']).copy()  \n",
     "\n",
-    "#convert year to integer(bcs its text like '2020')\n",
+    "# Convert year to integer (was text)\n",
     "data_clean['Year'] = data_clean['Year'].astype(int)\n",
     "\n",
-    "#value to float\n",
+    "# Convert value to float\n",
     "data_clean['Value'] = data_clean['Value'].astype(float)\n",
     "\n",
-    "data_clean = data_clean.rename(columns={'Continent': 'Region'}) #renames continent col to region to match config.json file\n",
+    "# Rename continent column to Region\n",
+    "data_clean = data_clean.rename(columns={'Continent': 'Region'})\n",
     "\n",
-    "rows_after = len(data_clean)    #how many rows removed during cleaning\n",
+    "rows_after = len(data_clean)  # how many rows left after cleaning\n",
     "removed = rows_before - rows_after\n",
     "\n",
-    "print(f\"cleaning complete\")\n",
+    "print(\"Cleaning complete\")\n",
     "print(f\"Rows before: {rows_before}\")\n",
     "print(f\"Rows after: {rows_after}\")\n",
     "print(f\"Removed: {removed} empty rows\")\n",
     "\n",
-    "print(\"\\nCleaned data(first 10 rows):\")\n",
+    "print(\"\\nCleaned data (first 10 rows):\")\n",
     "print(data_clean.head(10))\n",
     "\n",
     "print(\"\\nData types:\")\n",
-    "print(data_clean.dtypes)"
+    "print(data_clean.dtypes)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 168,
    "id": "f787768e-d1a5-48e5-9350-d79be8f15f7e",
    "metadata": {},
    "outputs": [
@@ -233,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 169,
    "id": "f7f7f192-87f6-4283-a8d6-150f40dcddf3",
    "metadata": {},
    "outputs": [
@@ -264,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 170,
    "id": "131afa30-97fc-4738-bb1e-b7b42919789b",
    "metadata": {},
    "outputs": [
@@ -290,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 171,
    "id": "e792f426-7b54-40a3-b327-bbe798bb041b",
    "metadata": {},
    "outputs": [
@@ -314,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 172,
    "id": "6fe96db9-c510-4d0b-a633-14c4a3137aed",
    "metadata": {},
    "outputs": [
@@ -343,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 173,
    "id": "0661e737-143d-4283-b733-d2a2043ac49e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 174,
    "id": "f2dcec16-7833-4867-854f-d7026fd1b360",
    "metadata": {},
    "outputs": [
@@ -408,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 175,
    "id": "5bdee94a-c18f-442d-922e-679262110220",
    "metadata": {},
    "outputs": [
@@ -417,26 +431,22 @@
      "output_type": "stream",
      "text": [
       "Final Result:\n",
-      "{'Region': 'Asia', 'Year': 2020, 'Operation': 'average', 'Average_GDP': 1523398274308.0908}\n"
+      "{'operation': 'average', 'countries': 7, 'result': 1523398274308.0908}\n"
      ]
     }
    ],
    "source": [
-    "#11   result to display on dashboard\n",
-    "\n",
     "if config['operation'] == 'average':\n",
     "    result = {\n",
-    "        \"Region\": region,\n",
-    "        \"Year\": year,\n",
-    "        \"Operation\": \"average\",\n",
-    "        \"Average_GDP\": average_gdp\n",
+    "        \"operation\": \"average\",                         # lowercase 'operation'\n",
+    "        \"countries\": len(data_clean['Region'].unique()), # number of countries/regions\n",
+    "        \"result\": average_gdp                            # the computed GDP value\n",
     "    }\n",
     "else:\n",
     "    result = {\n",
-    "        \"Region\": region,\n",
-    "        \"Year\": year,\n",
-    "        \"Operation\": \"sum\",\n",
-    "        \"Total_GDP\": total_gdp\n",
+    "        \"operation\": \"sum\",\n",
+    "        \"countries\": len(data_clean['Region'].unique()),\n",
+    "        \"result\": total_gdp\n",
     "    }\n",
     "\n",
     "print(\"Final Result:\")\n",
@@ -445,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 176,
    "id": "a8590e3e-8d32-4828-b93c-64049733777e",
    "metadata": {},
    "outputs": [
@@ -468,8 +478,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 178,
+   "id": "450b305c-94b0-4b40-938b-d2bc0c694b5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COLUMNS FOUND: ['Country Name', 'Region', 'Year', 'Value']\n",
+      "\n",
+      "========== GDP ANALYTICS DASHBOARD ==========\n",
+      "Region    : Asia\n",
+      "Year      : 2020\n",
+      "Operation : average\n",
+      "============================================\n",
+      "\n",
+      "--- Computed Result ---\n",
+      "Countries Considered : 55\n",
+      "GDP Result           : 1523398274308.0908\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"C:\\Users\\Admin\\SDA-GPD-Project\\main.py\"\u001b[0m, line \u001b[35m7\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
+      "    \u001b[31mshow_dashboard\u001b[0m\u001b[1;31m()\u001b[0m\n",
+      "    \u001b[31m~~~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^\u001b[0m\n",
+      "  File \u001b[35m\"C:\\Users\\Admin\\SDA-GPD-Project\\dashboard.py\"\u001b[0m, line \u001b[35m47\u001b[0m, in \u001b[35mshow_dashboard\u001b[0m\n",
+      "    \u001b[1;31mplt\u001b[0m.show()\n",
+      "    \u001b[1;31m^^^\u001b[0m\n",
+      "\u001b[1;35mNameError\u001b[0m: \u001b[35mname 'plt' is not defined\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python main.py"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a3387759-48fa-4997-9cd4-7d522f40bc95",
+   "id": "4bbee86e-ded4-4250-a66a-c52a073c041c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -491,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
